# kitsune

./: CHECKLIST.md  Cargo.toml  README.md  makefile
docs/: actions.md  navigation.md  planning.md  roadmap.md  stable-snapshot.md  templates.md  usage.md
src/: cli.rs  fingerprint.rs  main.rs  model.rs  store.rs  tui.rs  validate.rs
src/backend/: herdr.rs  mod.rs  tmux.rs
